--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -121,11 +121,14 @@
                         <a class="dark-grey-text" href="#!">Your Account</a>
                     </p>
                     <p>
-                        <a class="dark-grey-text" href="#!">Become an Affiliate</a>
+                        <a class="dark-grey-text" href="https://www.helvartis.ch/fr/!">Helvatris</a>
                     </p>
                     <p>
-                        <a class="dark-grey-text" href="#!">Shipping Rates</a>
+                        <a class="dark-grey-text" href="https://www.swisscontact.org/fr/page-daccueil.html">Suisscontact</a>
                     </p>
+                    <p>
+                      <a class="dark-grey-text" href="#!">Conect</a>
+                  </p>
                     <p>
                         <a class="dark-grey-text" href="#!">Help</a>
                     </p>
@@ -159,7 +162,7 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center text-black-50 py-3">© 2020 Copyright:
-            <a class="dark-grey-text" href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+            <a class="dark-grey-text" href="https://elan.tn/"> Elanby conect</a>
         </div>
         <!-- Copyright -->
 
