--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -271,10 +271,10 @@ text-decoration: none;
 }
 
 .sidebar-nav li a:hover {
-color: #fff;
-background: rgba(255,255,255,0.2);
-text-decoration: none;
-}
+  color: #fff;
+  background: rgba(255,255,255,0.2);
+  text-decoration: none;
+  }
 
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
@@ -320,21 +320,114 @@ line-height: 65px;
 display: inline-block;
 }
 
-@media (max-width:767px) {
-  #wrapper {
-  padding-left: 70px;
-  transition: all .4s ease 0s;
+/* navbar ************** */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
 }
-#sidebar-wrapper {
-  left: 70px;
-  position: fixed;
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
-#wrapper.active {
-  padding-left: 150px;
+
+.active {
+  background-color: #4CAF50;
+  color: white;
 }
-#wrapper.active #sidebar-wrapper {
-  left: 150px;
-  width: 150px;
-  transition: all .4s ease 0s;
+
+.topnav .icon {
+  display: none;
 }
+
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
+
+.dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
+
+
+
+
+
+/* fin navbar */
+
+
