--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,12 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+<link rel="stylesheet" href="header.component.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 ​<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+
 
 
 <script>
@@ -19,9 +21,8 @@
     e.preventDefault();
     $("#wrapper").toggleClass("active");
 });
+
 </script>
-
-
 </head>
 
 
@@ -52,20 +53,19 @@
 
 
 
-          <li class="nav-item active">
+          <li class="nav-item actived">
             <a href="https://facebook/elan.com" class="fa fa-facebook"></a>
-
           </li>
 
-          <li class="nav-item active">
+          <li class="nav-item actived">
             <a href="#" class="fa fa-twitter" style="font-size: 30px"></a>
           </li>
 
-          <li class="nav-item active">
+          <li class="nav-item actived">
             <a href="#" class="fa fa-youtube" style="font-size: 30px"></a>
           </li>
 
-          <li class="nav-item active">
+          <li class="nav-item actived">
             <a href="#" class="fa fa-linkedin" style="font-size: 30px"></a>
           </li>
 
@@ -75,123 +75,15 @@
     </div>
   </nav>
 
-  <!-- Page Content -->
+  <!-- Page navbar  -->
 
 
-	<nav class="navbar navbar-expand-lg navbar-l navbar-custum">
-    <a class="navbar-brand" href="#">ELAN</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto topnav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Shop Pre-Owned</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Shop New Cars</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Clearence Event</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Resources
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Carfax</a>
-                    <a class="dropdown-item" href="#">Carproof</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Omnivic</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link btn btn-primary text-white" type="button" href="#" data-toggle="modal" data-target="#myModal">Sign In</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link btn btn-danger text-white" type="button" href="#" data-toggle="modal" data-target="#myModal">Register</a>
-            </li>
-        </ul>
-    </div>
-
-        <!-- The Modal -->
-<div class="modal" id="myModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-
-            <!-- Modal Header -->
-            <div class="modal-header">
-                <h4 class="modal-title">Customer Sign In</h4>
-                <button type="button" class="close" data-dismiss="modal">×</button>
-            </div>
-
-            <!-- Modal body -->
-            <div class="modal-body">
-                <form>
-                    <label class="sr-only" for="usrname">Username</label>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1"><i class="fa fa-user"></i></span>
-                        </div>
-                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-                    </div>
-
-
-                    <label class="sr-only" for="Password">Name</label>
-                    <div class="input-group mb-2">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon2"><i class="fa fa-key"></i></span>
-                        </div>
-                        <input id="Password" type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon2">
-                    </div>
-                </form>
-            </div>
-
-            <!-- Modal footer -->
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-primary" >Sign In</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-            </div>
-
-        </div>
-    </div>
-</div>
-</nav>
+<app-navbar></app-navbar>
 
 
 <!-- side barre -->
-<div class="row">
-  <div id="wrapper" class="active">
 
-    <!-- Sidebar -->
-          <!-- Sidebar -->
-    <div id="sidebar-wrapper">
-    <ul id="sidebar_menu" class="sidebar-nav">
-         <li class="sidebar-brand"><a id="menu-toggle" href="#">Menu<span id="main_icon" class="glyphicon glyphicon-align-justify"></span></a></li>
-    </ul>
-      <ul class="sidebar-nav" id="sidebar">
-        <li><a>Link1<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-        <li><a>link2<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-      </ul>
-    </div>
-
-    <!-- fin sidebare  -->
-
-
-  </div>
-
-</div>
-
+<app-sidebare></app-sidebare>
 
 
 
