--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,152 +1,146 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SIdeBarre</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {margin:0;font-family:Arial}
 
-  <!-- head link -->
-<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Accuiel</a>
+  <a href="#news">Qui sommes Nous</a>
+  <a href="#contact">Contact Nous </a>
+  <div class="dropdown">
+    <button class="dropbtn">Nos Produits
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Artisanaux</a>
+      <a href="#">Patissiers</a>
+    </div>
+  </div>
+  <a href="#about">Panier</a>
+  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
+
 
 
 <script>
-  !function ($) {
-
-     //Le left-menu sign
-    //for older jquery version
-   /*$('#left ul.nav li.parent > a > span.sign').click(function () {
-        $(this).find('i:first').toggleClass("icon-minus");
-    });*/
-
-    $(document).on("click","#left ul.nav li.parent > a > span.sign", function(){
-        $(this).find('i:first').toggleClass("icon-minus");
-    });
-
-    // Open Le current menu
-    $("#left ul.nav li.parent.active > a > span.sign").find('i:first').addClass("icon-minus");
-    $("#left ul.nav li.current").parents('ul.children').addClass("in");
-
-}(window.jQuery);
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
 </script>
-
-</head>
-
-
-<body>
-
-  <div class="container">
-    <div class="row">
-      <div id="left" class="span3">
-              <ul id="menu-group-1" class="nav menu">
-                  <li class="item-1 deeper parent active">
-                      <a class="" href="#">
-                          <span data-toggle="collapse" data-parent="#menu-group-1" href="#" class="sign"><i class="icon-plus icon-white"></i></span>
-                          <span class="lbl">Menu Group i</span>
-                      </a>
-                      <ul class="children nav-child unstyled small collapse" id="sub-item-1">
-                          <li class="item-2 deeper parent active">
-                              <a class="" href="#">
-                                  <span data-toggle="collapse" data-parent="#menu-group-1" href="#sub-item-2" class="sign"><i class="icon-plus icon-white"></i></span>
-                                  <span class="lbl">Menu 1</span>
-                              </a>
-                              <ul class="children nav-child unstyled small collapse" id="sub-item-2">
-                                  <li class="item-3 current active">
-                                      <a class="" href="#">
-                                          <span class="sign"><i class="icon-play"></i></span>
-                                          <span class="lbl">Menu 1.1</span> (current menu)
-                                      </a>
-                                  </li>
-                                  <li class="item-4">
-                                      <a class="" href="#">
-                                          <span class="sign"><i class="icon-play"></i></span>
-                                          <span class="lbl">Menu 1.2</span>
-                                      </a>
-                                  </li>
-                              </ul>
-                          </li>
-                          <li class="item-5 deeper parent">
-                              <a class="" href="#">
-                                  <span data-toggle="collapse" data-parent="#menu-group-1" href="#sub-item-5" class="sign"><i class="icon-plus icon-white"></i></span>
-                                  <span class="lbl">Menu 2</span>
-                              </a>
-                              <ul class="children nav-child unstyled small collapse" id="sub-item-5">
-                                  <li class="item-6">
-                                      <a class="" href="#">
-                                          <span class="sign"><i class="icon-play"></i></span>
-                                          <span class="lbl">Menu 2.1</span>
-                                      </a>
-                                  </li>
-                                  <li class="item-7">
-                                      <a class="" href="#">
-                                          <span class="sign"><i class="icon-play"></i></span>
-                                          <span class="lbl">Menu 2.2</span>
-                                      </a>
-                                  </li>
-                              </ul>
-                          </li>
-                      </ul>
-                  </li>
-
-                  <li class="item-8 deeper parent">
-                      <a class="" href="#">
-                          <span data-toggle="collapse" data-parent="#menu-group-1" href="#sub-item-8" class="sign"><i class="icon-plus icon-white"></i></span>
-                          <span class="lbl">Menu Group ii</span>
-                      </a>
-                      <ul class="children nav-child unstyled small collapse" id="sub-item-8">
-                          <li class="item-9 deeper parent">
-                              <a class="" href="#">
-                                  <span data-toggle="collapse" data-parent="#menu-group-1" href="#sub-item-9" class="sign"><i class="icon-plus icon-white"></i></span>
-                                  <span class="lbl">Menu 1</span>
-                              </a>
-                              <ul class="children nav-child unstyled small collapse" id="sub-item-9">
-                                  <li class="item-10">
-                                      <a class="" href="#">
-                                          <span class="sign"><i class="icon-play"></i></span>
-                                          <span class="lbl">Menu 1.1</span>
-                                      </a>
-                                  </li>
-                                  <li class="item-11">
-                                      <a class="" href="#">
-                                          <span class="sign"><i class="icon-play"></i></span>
-                                          <span class="lbl">Menu 1.2</span>
-                                      </a>
-                                  </li>
-                              </ul>
-                          </li>
-                          <li class="item-12 deeper parent">
-                              <a class="" href="#">
-                                  <span data-toggle="collapse" data-parent="#menu-group-1" href="#sub-item-12" class="sign"><i class="icon-plus icon-white"></i></span>
-                                  <span class="lbl">Menu 2</span>
-                              </a>
-                              <ul class="children nav-child unstyled small collapse" id="sub-item-12">
-                                  <li class="item-13">
-                                      <a class="" href="#">
-                                          <span class="sign"><i class="icon-play"></i></span>
-                                          <span class="lbl">Menu 2.1</span>
-                                      </a>
-                                  </li>
-                                  <li class="item-14">
-                                      <a class="" href="#">
-                                          <span class="sign"><i class="icon-play"></i></span>
-                                          <span class="lbl">Menu 2.2</span>
-                                      </a>
-                                  </li>
-                              </ul>
-                          </li>
-                      </ul>
-                  </li>
-              </ul>
-      </div>
-    </div>
-  </div>
-
-
-
-<!-- /#wrapper -->
-
 
 </body>
 </html>
